# dps_stac_test

./: README.md  build-env.sh  main.py  pyproject.toml  run.sh
gdal_wrapper/: environment.yml  gdal_wrapper.py  run_gdal.sh
